some css pictures not working properly

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1>Question Game</h1>
-
+    <header>
+    <h1>Truth or False, That is the question</h1>
+    </header>
     <p id="show-timer"></p>
     <p id="score"></p>
     <p id="question"></p>
@@ -20,8 +22,9 @@
 
         <br>
         <br>
+        <div class="img-container"></div>
         <br>
-        <button id="restart">Restart Game</button>
+        <button class="button" id="restart">Restart Game</button>
     
 
 
